--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-body">
-            <p>This is Modal 2 body text.</p>
+            <p>This user already exist. Please sign in.</p>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" id="button-modal2">Close</button>
